- add new tests for JPA  - change old test for JPA  - fix htmls  - change fetch EAGER -> LAZY  - delete NamedQuerys  - fix scheme for ManyToMany