@@ -1,145 +1,118 @@
 package org.example.univer.controllers;
 
+import org.example.univer.dto.HolidayDto;
+import org.example.univer.mappers.HolidayMapper;
 import org.example.univer.models.Holiday;
 import org.example.univer.services.HolidayService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@ExtendWith(MockitoExtension.class)
 public class HolidayControllerTest {
     private MockMvc mockMvc;
-
-    @Mock
     private HolidayService holidayService;
-
-    @InjectMocks
     private HolidayController holidayController;
-
+    private HolidayMapper holidayMapper;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
+        holidayService = mock(HolidayService.class);
+        holidayMapper = mock(HolidayMapper.class);
+        holidayController = new HolidayController(holidayService, holidayMapper);
         mockMvc = MockMvcBuilders.standaloneSetup(holidayController).build();
-        MockitoAnnotations.openMocks(this);
-        ReflectionTestUtils.setField(holidayService, "maxDayHoliday", 14);
-        ReflectionTestUtils.setField(holidayService, "startDayHoliday", "MONDAY");
     }
 
     @Test
-    public void whenGetAllHolidays_thenAllHolidaysReturned() throws Exception {
-        Holiday holiday1 = new Holiday();
-        holiday1.setDescription("test");
-        holiday1.setStartHoliday(LocalDate.parse("2024-01-01"));
-        holiday1.setEndHoliday(LocalDate.parse("2024-01-30"));
-        holidayService.create(holiday1);
-
-        Holiday holiday2 = new Holiday();
-        holiday2.setDescription("test");
-        holiday2.setStartHoliday(LocalDate.parse("2024-01-02"));
-        holiday2.setEndHoliday(LocalDate.parse("2024-02-03"));
-        holidayService.create(holiday2);
-
-        List<Holiday> holidays = Arrays.asList(holiday1, holiday2);
-
-        when(holidayService.findAll()).thenReturn(holidays);
+    void whenFindAll_thenAllHolidaysReturned() throws Exception {
+        Holiday holiday = new Holiday();
+        HolidayDto dto = new HolidayDto();
+        when(holidayService.findAll()).thenReturn(List.of(holiday));
+        when(holidayMapper.toDto(holiday)).thenReturn(dto);
 
         mockMvc.perform(get("/holidays"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("holidays/index"))
-                .andExpect(forwardedUrl("holidays/index"))
-                .andExpect(model().attribute("holidays", holidays))
-                .andDo(print());
+                .andExpect(model().attributeExists("holidaysDto"))
+                .andExpect(model().attribute("title", "All Holidays"));
     }
 
     @Test
-    public void whenGetOneHoliday_thenOneGroupReturned() throws Exception {
-        Holiday holiday = new Holiday();
-        holiday.setDescription("test");
-        holiday.setStartHoliday(LocalDate.parse("2024-01-01"));
-        holiday.setEndHoliday(LocalDate.parse("2024-01-30"));
-        holidayService.create(holiday);
-
-        when(holidayService.findById(1L)).thenReturn(Optional.of(holiday));
-
-        mockMvc.perform(get("/holidays/{id}", 1))
-                .andExpect(status().isOk())
-                .andExpect(view().name("holidays/show"))
-                .andExpect(model().attributeExists("holiday"))
-                .andExpect(model().attribute("holiday", holiday))
-                .andExpect(forwardedUrl("holidays/show"))
-                .andDo(print());
-    }
-
-    @Test
-    void whenCreateNewHoliday_thenNewHolidayCreated() throws Exception {
+    void whenGetCreateForm_thenEmptyFormReturned() throws Exception {
         mockMvc.perform(get("/holidays/new"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("holidays/new"))
-                .andExpect(model().attributeExists("holiday"))
-                .andDo(print());
+                .andExpect(model().attributeExists("holidayDto"));
     }
 
+
     @Test
-    void whenEditHoliday_thenHolidayFound() throws Exception {
-        Holiday holiday = new Holiday();
-        holiday.setDescription("test");
-        holiday.setStartHoliday(LocalDate.parse("2024-01-01"));
-        holiday.setEndHoliday(LocalDate.parse("2024-01-30"));
+    void whenPostNewValidHoliday_thenRedirectToIndex() throws Exception {
+        HolidayDto dto = new HolidayDto();
+        Holiday entity = new Holiday();
+        when(holidayMapper.toEntity(any(HolidayDto.class))).thenReturn(entity);
 
-        when(holidayService.findById(1L)).thenReturn(Optional.of(holiday));
+        mockMvc.perform(post("/holidays"))
+                .andExpect(status().is3xxRedirection())
+                .andExpect(redirectedUrl("/holidays"));
 
-        mockMvc.perform(get("/holidays/{id}/edit", 1))
+        verify(holidayService).create(any(Holiday.class));
+    }
+
+
+    @Test
+    void whenEditHoliday_thenHolidayReturnedToForm() throws Exception {
+        Holiday group = new Holiday();
+        HolidayDto dto = new HolidayDto();
+        when(holidayService.findById(1L)).thenReturn(Optional.of(group));
+        when(holidayMapper.toDto(group)).thenReturn(dto);
+
+        mockMvc.perform(get("/holidays/1/edit"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("holidays/edit"))
-                .andExpect(model().attributeExists("holiday"))
-                .andExpect(forwardedUrl("holidays/edit"))
-                .andExpect(model().attribute("holiday", holiday))
-                .andDo(print());
-
-        verify(holidayService, times(1)).findById(1L);
+                .andExpect(model().attributeExists("holidayDto"));
     }
 
     @Test
-    public void whenUpdateHoliday_thenHolidayUpdated() throws Exception {
-        Holiday holiday = new Holiday();
-        holiday.setDescription("test");
-        holiday.setStartHoliday(LocalDate.parse("2024-01-01"));
-        holiday.setEndHoliday(LocalDate.parse("2024-01-30"));
+    void whenUpdateValidHoliday_thenRedirectToIndex() throws Exception {
+        HolidayDto dto = new HolidayDto();
+        Holiday entity = new Holiday();
+        when(holidayMapper.toEntity(any(HolidayDto.class))).thenReturn(entity);
 
-        mockMvc.perform(patch("/holidays/{id}", 1)
-                        .flashAttr("holiday", holiday))
+        mockMvc.perform(patch("/holidays/1"))
                 .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/holidays"))
-                .andDo(print());
+                .andExpect(redirectedUrl("/holidays"));
 
-        verify(holidayService, times(1)).update(holiday);
+        verify(holidayService).update(any(Holiday.class));
     }
 
     @Test
-    void whenDeleteHoliday_thenHolidayDeleted() throws Exception {
+    void whenFindById_thenHolidayReturned() throws Exception {
         Holiday holiday = new Holiday();
-        holiday.setId(1L);
-        mockMvc.perform(delete("/holidays/{id}", 1))
+        HolidayDto dto = new HolidayDto();
+        when(holidayService.findById(1L)).thenReturn(Optional.of(holiday));
+        when(holidayMapper.toDto(holiday)).thenReturn(dto);
+
+        mockMvc.perform(get("/holidays/1"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("holidays/show"))
+                .andExpect(model().attributeExists("holidayDto"));
+    }
+
+    @Test
+    void whenDeleteHoliday_thenRedirectToIndex() throws Exception {
+        mockMvc.perform(delete("/holidays/1"))
+                .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrl("/holidays"));
 
         verify(holidayService).deleteById(1L);
     }
-
 }
